# atomvm_rfid

./: .gitignore  CMakeLists.txt  Kconfig  shell.nix
ports/: atomvm_rfid.c
ports/include/: atomvm_rfid.h
src/: rfid.app.src  rfid.erl
